--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -98,6 +98,11 @@ html {
     margin-right: 15px;
   }
 }
+@media screen and (max-width: 768px) {
+  .header .nav {
+    display: none;
+  }
+}
 .header .nav ul {
   display: flex;
   -moz-column-gap: 54px;
@@ -109,7 +114,7 @@ html {
          column-gap: 36px;
   }
 }
-.header a {
+.header .nav ul a {
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-weight: 700;
   font-size: 20px;
@@ -118,21 +123,21 @@ html {
   transition: 0.3s;
 }
 @media screen and (max-width: 1540px) {
-  .header a {
+  .header .nav ul a {
     font-size: 17px;
   }
 }
 @media screen and (max-width: 1100px) {
-  .header a {
+  .header .nav ul a {
     font-size: 13px;
   }
 }
 @media screen and (max-width: 768px) {
-  .header a {
+  .header .nav ul a {
     font-size: 12px;
   }
 }
-.header a::before {
+.header .nav ul a::before {
   content: "";
   position: absolute;
   width: 0;
@@ -142,15 +147,24 @@ html {
   transition: 0.3s;
 }
 @media screen and (max-width: 1540px) {
-  .header a::before {
+  .header .nav ul a::before {
     height: 2px;
   }
 }
-.header a:hover {
+.header .nav ul a:hover {
   color: #95F364;
 }
-.header a:hover::before {
+.header .nav ul a:hover::before {
   width: 70%;
+}
+.header .openNavbar {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .header .openNavbar {
+    cursor: pointer;
+    display: block;
+  }
 }
 
 .background-image {
@@ -1147,12 +1161,14 @@ html {
     padding: 13px;
   }
 }
-.creators .creators-container .creators-item:hover {
-  background: rgba(11, 61, 112, 0.1);
-}
-.creators .creators-container .creators-item:hover .creators-icon {
-  background-color: rgba(22, 77, 145, 0.3019607843);
-  filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+@media screen and (max-width: 768px) {
+  .creators .creators-container .creators-item:hover {
+    background: rgba(11, 61, 112, 0.1);
+  }
+  .creators .creators-container .creators-item:hover .creators-icon {
+    background-color: rgba(22, 77, 145, 0.3019607843);
+    filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+  }
 }
 .creators .creators-container .creators-item .creators-icon {
   width: 80px;
