--- a/assets/styles/scss/components/_header.scss
+++ b/assets/styles/scss/components/_header.scss
@@ -1,4 +1,4 @@
-.header{
+.header {
     position: fixed;
     width: 100%;
     height: 140px;
@@ -7,9 +7,11 @@
     align-items: center;
     @include flex-spaceBetween;
     z-index: 999;
+
     @include laptop {
         height: 120px;
     }
+
     @include break(1100px) {
         height: 100px;
     }
@@ -17,8 +19,9 @@
     @include tablet {
         height: 80px;
     }
-    .images{
-        img{
+
+    .images {
+        img {
             @include laptop {
                 height: 56px;
             }
@@ -31,9 +34,10 @@
                 height: 48px;
             }
         }
-        
-        .uniLabImage{
+
+        .uniLabImage {
             margin-right: 32px;
+
             @include laptop {
                 margin-right: 25px;
             }
@@ -44,51 +48,69 @@
         }
     }
 
-    .nav ul{
-        display: flex;
-        column-gap: 54px;
+    .nav {
+        @include tablet {
+            display: none;
+        }
+        ul {
+            display: flex;
+            column-gap: 54px;
 
-        @include break(1100px) {
-            column-gap: 36px;
+            @include break(1100px) {
+                column-gap: 36px;
+            }
+
+            a {
+                font-family: $font-Nino-Mtavruli;
+                font-weight: 700;
+                font-size: $fz-l;
+
+                @include laptop {
+                    font-size: 17px;
+                }
+
+                @include break(1100px) {
+                    font-size: 13px;
+                }
+
+                @include tablet {
+                    font-size: 12px;
+                }
+
+                color: #FFFFFF;
+                position: relative;
+                transition: $transition;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 0;
+                    height: 3px;
+                    bottom: -5px;
+                    background-color: $green;
+                    transition: $transition;
+
+                    @include laptop {
+                        height: 2px;
+                    }
+                }
+
+                &:hover {
+                    color: $green;
+
+                    &::before {
+                        width: 70%;
+                    }
+                }
+
+            }
         }
     }
-
-    a{
-        font-family: $font-Nino-Mtavruli;
-        font-weight: 700;
-        font-size: $fz-l;
-        @include laptop {
-            font-size: 17px;
-        }
-        @include break(1100px) {
-            font-size: 13px;
-        }
+    .openNavbar {
+        display: none;
         @include tablet {
-            font-size: 12px;
+            cursor: pointer;
+            display: block;
         }
-        color: #FFFFFF;
-        position: relative;
-        transition: $transition;
-
-        &::before{
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 3px;
-            bottom: -5px;
-            background-color: $green;
-            transition: $transition;
-            @include laptop {
-                height: 2px;
-            }
-        }
-
-        &:hover{
-            color: $green;
-            &::before{
-                width: 70%;
-            }
-        }
-
     }
 }
