--- a/assets/styles/scss/components/_main.scss
+++ b/assets/styles/scss/components/_main.scss
@@ -609,13 +609,15 @@
                 padding: 13px;
             }
 
-            &:hover{
-                    background: rgba(11, 61, 112, 0.1);
-                    .creators-icon{
-                            background-color: #164D914D;
-                            filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
-    
-                    }
+            @include tablet {
+                &:hover{
+                        background: rgba(11, 61, 112, 0.1);
+                        .creators-icon{
+                                background-color: #164D914D;
+                                filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+        
+                        }
+                }
             }
 
             .creators-icon{
